Package description and homepage

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,7 @@
 name: pastebin
-description: A new Flutter package project.
+description: A pure Dart Pastebin API Wrapper.
 version: 0.0.1
-author:
-homepage:
+homepage: https://github.com/freitzzz/pastebin.dart
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
