--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,11 +7,11 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  http: 0.12.2
-  dartz: 0.9.2
-  xml: 4.5.1
+  http: ^0.12.2
+  dartz:  ^0.9.2
+  xml: ^4.5.1
+  meta: ^1.2.3
 
 dev_dependencies:
   effective_dart: 1.2.4
-  meta: 1.2.3
   test: 1.15.4
