include publish_to: none on example app pubspec

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,11 +1,10 @@
 name: example
 version: 1.0.0
+publish_to: none
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
 
-dependencies:  
+dependencies:
   pastebin:
     path: ../
-
-dev_dependencies:
