--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: pastebin
-description: A pure Dart Pastebin API Wrapper.
-version: 0.0.2
+description: A pure Dart Pastebin API Wrapper. Allows you to interact with all Pastebin API endpoints with ease.
+version: 1.0.0
 homepage: https://github.com/dart-pacotes/pastebin.dart
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   http: ^0.13.4
